--- a/webapp/client/package.json
+++ b/webapp/client/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
+    "craco": "^0.0.3",
     "craco-less": "^1.18.0",
     "history": "4.10.1",
     "query-string": "^7.0.1",
